chore(style): fix z-index

--- a/guten/src/blocks/team-section/style.scss
+++ b/guten/src/blocks/team-section/style.scss
@@ -1,5 +1,6 @@
 .wp-block-journeyo-team-section {
   overflow: hidden;
+  z-index: 20;
   position: relative;
   padding: 0 16px;
   margin-top: 70px;
